# BTB

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO
maps/: first_map.json
src/: controller.cpp  controller.hpp  dataviewer.cpp  dataviewer.hpp  gamescene.cpp  gamescene.hpp  interface.cpp  interface.hpp  json.hpp  main.cpp  mapData.cpp  mapData.hpp  mapdata.cpp  mapdata.hpp  mapreader.cpp  mapreader.hpp  scenecircle.cpp  scenecircle.hpp  scenecircledata.cpp  scenecircledata.hpp  sceneelement.cpp  sceneelement.hpp  sceneelementdata.cpp  sceneelementdata.hpp  timeviewer.cpp  timeviewer.hpp  utils.cpp  utils.hpp  view.cpp  view.hpp
